js/js.translator/testData/incremental/invalidation/interfaceSuperUsage/lib1/ClassA.0.kt
class ClassA : Interface {
    override var someVar: Int?
        get() = super.someVar
        set(konstue) {
            super.someVar = konstue
        }
}
